# FontCreator

./: .gitignore  CMakeLists.txt  deploy.cmd  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  pixelgridwidget.cpp  pixelgridwidget.h  readme.md
installer/: make_installer.cmd
installer/config/: config.xml
